tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__EnhancedBrewingS-AAAAAAAAAAAAAAAAAAAJMg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2354,
  "prerequisites": [
    2351
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After the altar creation is complete, a player has to place up to 8 solid blocks (of any kind) near the altar. These blocks require 1 block of air above them and no solid blocks touching them on the sides and diagonally. These blocks are the pedestals. The Dragon Essence Altar will project purple particles to all the pedestals connected to it.\n\nPlacing an item on the pedestal is done by throwing. After the item has been placed on top of the pedestal, the altar will start \"infusing\" the item using Dragon Essence stored in the altar itself. Adding more essence to the altar is done by right-clicking.\n\nInfusing makes items repair themselves (excluding items which require Energy), increase the level of existing enchantments (up to 4 enchantments per item) and even gain new enchantments.\n\nThere are two items by this mod which can be obtained only by Dragon Essence infusion:\n\nEnhanced Brewing Stand - by infusing a vanilla Brewing Stand, requires 20 pieces of Dragon Essence.\n\nTemple Caller - by infusing a vanilla Eye of Ender, requires 50 pieces of Dragon Essence. It's disabled though, so don't bother.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Enhanced Brewing Stand",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2351
  ],
  "rewards": [],
  "tasks": []
}
