tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__EssenceAltarDrag-AAAAAAAAAAAAAAAAAAAJLw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2351,
  "prerequisites": [
    2352
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To create a Dragon Essence Altar, a player has to use Dragon Essence on the Basic Essence Altar (right-click the altar with the Essence).\n\nAfter that, the Altar will request 8 random items to be fed into it.\nDragon Essence Altar may request the following items: Obsidian, Stone Bricks, Map, Book, Bookshelf, Iron Fence, End Stone, Ender Pearl, Eye of Ender, Enderman Head.\n\nAfter this you can store more Essence inside the Altar.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Essence Altar Dragon Infused",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2352
  ],
  "rewards": [],
  "tasks": []
}
