tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__FindalltheOresin-AAAAAAAAAAAAAAAAAAAJMQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2353,
  "optional_prerequisites": [
    2356,
    2358,
    2359,
    2360
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "End Powder Ore:\nGenerated in the End in between End Stone at every height level. When the ore is mined with any type of pickaxe, it will drop one or two pieces of End Powder.\n\nEndium Ore:\nRare ore that starts to appear near Dungeon Towers, and gets more common the further you travel.\n\nIgneous Rock Ore:\nGenerated in the End in the Burning Mountains and sometimes in the Endstone Blobs. This block emits lava particles but does no damage to the player. When the ore is mined with an Iron Pickaxe or better, it will drop one Igneous Rock.\n\nNote: the Fortune Enchantment does not affect Igneous Rock Ore. However, the Silk Touch enchantment does work with this block. You can get better output by crushing the block with machines.\n\nInstability Ore:\nGenerated in the End in the Biome Islands. When the ore is mined with an Advanced Pickaxe, it has a 40% chance to drop one Instability Orb, otherwise it breaks without providing any items.\n\nNote: the Fortune Enchantment increases the chance of getting an Instability Orb by 4% per enchantment level.\n\nStardust Ore:\nGenerated in the End in the Biome Islands. When the ore is mined with an Advanced Pickaxe, it has a chance to drop 0-4 pieces of Stardust. Even though this ore comes in clusters, two ore blocks from the same cluster can be generated away from each other, making Stardust Ore a rare resource which requires thorough exploration and mining.\n\nStardust Ore block has different textures on its sides.\n\nSphalerite: You can macerate it for crushed normal sphalerite,",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Find all the Ores in the End",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
