tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__InfusedAltar-AAAAAAAAAAAAAAAAAAAJTg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2382,
  "prerequisites": [
    2352
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Altar with one or more special effects (enhancements).\n\nThe way to make an enhanced altar is to right-click a Brewing Stand with End Powder in your Hand. You can continue adding as many effects to one Altar as you want.\n\nEnhancements:\nRange (Block of Lapis)\nIncrease the range an item can be infused by the Altar.\n\nSpeed (Block of Redstone)\nIncreasing the speed of the Altar.\n\nEfficiency (Block of Emerald)\nReduce the cost of Dragon Essence using in an Altar recipe.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Infused Altar",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2352
  ],
  "rewards": [],
  "tasks": []
}
