tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__IsThistheEndNoit-AAAAAAAAAAAAAAAAAAAD2g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 986,
  "prerequisites": [
    1233,
    602
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You investigated the pearls, and managed to reactivate them to become eyes. This has shown you that the source of the disturbance seems to be coming out of the portal frames inside the strongholds, deep underground. They seem strangely drawn towards its mysterious depths. Perhaps they can be used to reactivate it?\n\nHint: Throwing Ender Eyes in the air in the Overworld will guide you to the nearest stronghold. From time to time Ender Eyes are destroyed in this process, so make extras. Try to do so in a place without obstructions so you can see where it went.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Is This the End? No it's the END Dimension",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1233,
    602
  ],
  "rewards": [],
  "tasks": []
}
